2013-09-30  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/GNUstepBase/GSVersionMacros.h: Fix usage of __APPLE__ macro.
	Patch by Graham Lee <iamleeg@gmail.com>

2013-08-22  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSScanner.m: GSScanDouble() permit overlong mantissa (more
        digits than can be represented in a double) and ignore excess digits
        for compatibility with OSX.  Inspired by testplant branch r37004
        which tries to allow more digits at the cost of breaking parsing
        in locales where the decimal point is a comma rather than a dot.

2013-08-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSIndexPath.m:
	* Source/NSMapTable.m:
	* Source/NSSocketPortNameServer.m:
	* Source/GSLocale.m:
	* Source/NSNetServices.m:
	* Source/NSTimeZone.m:
	* Source/NSHashTable.m:
	* Source/GSSocketStream.m:
	* Source/NSValueTransformer.m:
	* Source/NSBundle.m:
	* Source/NSURLHandle.m:
	* Source/NSPropertyList.m:
	* Source/NSAffineTransform.m:
	* Source/NSPathUtilities.m:
	* Source/NSScanner.m:
	* Source/NSDistributedNotificationCenter.m:
	* Source/NSProcessInfo.m:
	* Source/NSNotificationQueue.m:
	* Source/NSSocketPort.m:
	* Source/NSAttributedString.m:
	* Source/NSRunLoop.m:
	* Source/NSOperation.m:
	* Source/NSObject+NSComparisonMethods.m:
	* Source/NSFormatter.m:
	* Source/NSUserDefaults.m:
	* Source/NSArray.m:
	* Source/NSMessagePortNameServer.m:
	* Source/GSStream.m:
	* Source/NSKeyedArchiver.m:
	* Source/NSDebug.m:
	* Source/NSXMLPrivate.h:
	* Source/NSKeyedUnarchiver.m:
	* Source/NSPortMessage.m:
	* Source/NSFileHandle.m:
	* Source/NSDistributedLock.m:
	* Source/GSTLS.m:
	* Source/NSPredicate.m:
	* Source/NSKeyValueObserving.m:
	* Source/NSAssertionHandler.m:
	* Source/GSHTTPURLHandle.m:
	* Source/GSDispatch.h:
	* Source/NSPort.m:
	* Source/NSSortDescriptor.m:
	* Source/NSMessagePort.m:
	* Source/win32/NSMessagePort.m:
	* Source/win32/NSMessagePortNameServer.m:
	* Source/NSInvocation.m:
	* Source/NSFileManager.m:
	* Source/common.h: